logs/dag_id=Air_pollution_data_pipeline/run_id=manual__2024-06-15T15:04:02+00:00/task_id=insert_into_db_table/attempt=1.log
[2024-06-15T15:08:17.826+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-06-15T15:08:17.866+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Air_pollution_data_pipeline.insert_into_db_table manual__2024-06-15T15:04:02+00:00 [queued]>
[2024-06-15T15:08:17.877+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Air_pollution_data_pipeline.insert_into_db_table manual__2024-06-15T15:04:02+00:00 [queued]>
[2024-06-15T15:08:17.878+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 6
[2024-06-15T15:08:17.894+0000] {taskinstance.py:2330} INFO - Executing <Task(_PythonDecoratedOperator): insert_into_db_table> on 2024-06-15 15:04:02+00:00
[2024-06-15T15:08:17.901+0000] {standard_task_runner.py:63} INFO - Started process 654 to run task
[2024-06-15T15:08:17.905+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'Air_pollution_data_pipeline', 'insert_into_db_table', 'manual__2024-06-15T15:04:02+00:00', '--job-id', '14', '--raw', '--subdir', 'DAGS_FOLDER/main.py', '--cfg-path', '/tmp/tmp4m1nuyge']
[2024-06-15T15:08:17.908+0000] {standard_task_runner.py:91} INFO - Job 14: Subtask insert_into_db_table
[2024-06-15T15:08:17.972+0000] {task_command.py:426} INFO - Running <TaskInstance: Air_pollution_data_pipeline.insert_into_db_table manual__2024-06-15T15:04:02+00:00 [running]> on host 6e26965f02f1
[2024-06-15T15:08:18.096+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='khalid' AIRFLOW_CTX_DAG_ID='Air_pollution_data_pipeline' AIRFLOW_CTX_TASK_ID='insert_into_db_table' AIRFLOW_CTX_EXECUTION_DATE='2024-06-15T15:04:02+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-06-15T15:04:02+00:00'
[2024-06-15T15:08:18.097+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-06-15T15:08:18.104+0000] {logging_mixin.py:188} WARNING - /opt/***/dags/database/populate_db.py:26 FutureWarning: Passing literal json to 'read_json' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.
[2024-06-15T15:08:18.115+0000] {populate_db.py:36} INFO - Inserting data into table
[2024-06-15T15:08:18.117+0000] {baseoperator.py:400} WARNING - SQLExecuteQueryOperator.execute cannot be called outside TaskInstance!
[2024-06-15T15:08:18.117+0000] {sql.py:276} INFO - Executing: 
        INSERT INTO emission (Entity, Code, Year, Nitrogen_oxide_(NOx), Sulphur_dioxide_(SO₂)_emissions, Carbon_monoxide_(CO)_emissions, Organic_carbon_(OC)_emissions, Non_methane_volatile_organic_compounds_(NMVOC)_emissions, Black_carbon_(BC)_emissions, Ammonia_(NH₃)_emissions, Unnamed:_10)
        VALUES (%s,%s,%s,%s,%s,%s,%s,%s,%s,%s,%s)
    
[2024-06-15T15:08:18.129+0000] {base.py:84} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-06-15T15:08:18.141+0000] {base.py:84} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-06-15T15:08:18.149+0000] {sql.py:487} INFO - Running statement: 
        INSERT INTO emission (Entity, Code, Year, Nitrogen_oxide_(NOx), Sulphur_dioxide_(SO₂)_emissions, Carbon_monoxide_(CO)_emissions, Organic_carbon_(OC)_emissions, Non_methane_volatile_organic_compounds_(NMVOC)_emissions, Black_carbon_(BC)_emissions, Ammonia_(NH₃)_emissions, Unnamed:_10)
        VALUES (%s,%s,%s,%s,%s,%s,%s,%s,%s,%s,%s)
    , parameters: None
[2024-06-15T15:08:18.151+0000] {populate_db.py:48} ERROR - Error inserting data into table
Traceback (most recent call last):
  File "/opt/airflow/dags/database/populate_db.py", line 43, in insert_into_db_table
    insert_data_task.execute(context=None)  # Execute the task
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/providers/common/sql/hooks/sql.py", line 435, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/providers/common/sql/hooks/sql.py", line 492, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "("
LINE 2: ...INTO emission (Entity, Code, Year, Nitrogen_oxide_(NOx), Sul...
                                                             ^

[2024-06-15T15:08:18.154+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-06-15T15:08:18.155+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/decorators/base.py", line 265, in execute
    return_value = super().execute(context)
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/database/populate_db.py", line 43, in insert_into_db_table
    insert_data_task.execute(context=None)  # Execute the task
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/providers/common/sql/hooks/sql.py", line 435, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/providers/common/sql/hooks/sql.py", line 492, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "("
LINE 2: ...INTO emission (Entity, Code, Year, Nitrogen_oxide_(NOx), Sul...
                                                             ^

[2024-06-15T15:08:18.167+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=Air_pollution_data_pipeline, task_id=insert_into_db_table, run_id=manual__2024-06-15T15:04:02+00:00, execution_date=20240615T150402, start_date=20240615T150817, end_date=20240615T150818
[2024-06-15T15:08:18.180+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 14 for task insert_into_db_table (syntax error at or near "("
LINE 2: ...INTO emission (Entity, Code, Year, Nitrogen_oxide_(NOx), Sul...
                                                             ^
; 654)
[2024-06-15T15:08:18.198+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-06-15T15:08:18.216+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-06-15T15:08:18.219+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
